testsuite/tests/typecheck/should_fail/T21447.stderr
T21447.hs:8:3: error: [GHC-89498]
    • A newtype must not be a GADT
      H :: forall a. a -> H @GHC.Internal.Types.LiftedRep a
    • In the definition of data constructor ‘H’
      In the newtype declaration for ‘H’

